edit  grid-gap button price

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ea debitis sint eos unde dolore.
                         Id provident fuga repellendus quae soluta qui repellat, earum molestiae, delectus saepe, aliquid
                         .</p>
-                    <button>shop now</button>
+                    <button><a href="/product.html">shop now</a></button>
                 </div>
 
             </div>
