--- a/index.html
+++ b/index.html
@@ -85,6 +85,53 @@
     </div>
     <!-- end user modal -->
 
+    <!-- cart modal -->
+
+    <div class="cart-item-modal">
+        <div class="cart-item-box">
+            <button class="close-item">X</button>
+            <h2> your cart (<span> 3 </span> item )</h2>
+            <ul class="cart-item-list">
+                <li>
+                    <div class="cart-item-img">
+                        <img src="/img/img-home.avif" alt="" width="60px" height="60px">
+                    </div>
+                    <div class="cart-item-info">
+                        <p>Samsung 49-Inch CHG90 144Hz Curved Gaming Monitor (LC49HG90DMNXZA) - Super Ultrawide Screen
+                            QLED </p>
+                        <div class="item-option">
+                            <select name="size" id="item-size">
+                                <option value="s" selected>size s</option>
+                                <option value="m">size m</option>
+                                <option value="l">size l</option>
+                            </select>
+
+                            <div class="item-quantity">
+                                <span class="item-price" style="color: red;"> 10$</span>
+                                <button class="reduce"> -</button>
+                                <span class="num"> 1 </span>
+                                <button class="increase"> +</button>
+                            </div>
+                            <div class="item-total">
+                                <span> total : <span style="color: green;">100$</span></span>
+                                <i class="fa-solid fa-delete-left"></i>
+                            </div>
+                        </div>
+
+
+                    </div>
+
+                </li>
+
+            </ul>
+            <div class="sub-total">
+                <h3>sub total : <span style="color: green;">0$</span></h3>
+                <button> check out</button>
+            </div>
+        </div>
+    </div>
+    <!-- end cart -modal -->
+
     <!-- ========================= main ====================-->
     <main>
         <div class="container">
