add to cart finis

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="nav-icon">
                     <i id="search-icon" class="fa-solid fa-magnifying-glass" onclick="openSearch()"></i>
                     <i id="user-icon" class="fa-solid fa-user" onclick="openUser()"></i>
-                    <i id="cart-icon" class="fa-solid fa-cart-shopping"><span id="count">0</span></i>
+                    <i id="cart-icon" class="fa-solid fa-cart-shopping"><span id="nav-count">0</span></i>
                     <i id="bars-icon" class="fa-solid fa-bars" onclick="openMenu()"></i>
                 </div>
             </div>
@@ -90,9 +90,9 @@
     <div class="cart-item-modal">
         <div class="cart-item-box">
             <button class="close-item">X</button>
-            <h2> your cart (<span> 3 </span> item )</h2>
+            <h2> your cart (<span class="count-item"> 3 </span> item )</h2>
             <ul class="cart-item-list">
-                <li>
+                <!-- <li>
                     <div class="cart-item-img">
                         <img src="/img/img-home.avif" alt="" width="60px" height="60px">
                     </div>
@@ -100,32 +100,25 @@
                         <p>Samsung 49-Inch CHG90 144Hz Curved Gaming Monitor (LC49HG90DMNXZA) - Super Ultrawide Screen
                             QLED </p>
                         <div class="item-option">
-                            <select name="size" id="item-size">
-                                <option value="s" selected>size s</option>
-                                <option value="m">size m</option>
-                                <option value="l">size l</option>
-                            </select>
+                            <p> size : m</p>
 
                             <div class="item-quantity">
                                 <span class="item-price" style="color: red;"> 10$</span>
-                                <button class="reduce"> -</button>
-                                <span class="num"> 1 </span>
-                                <button class="increase"> +</button>
+                                <button class="item-reduce"> -</button>
+                                <span class="item-num"> 1 </span>
+                                <button class="item-increase"> +</button>
                             </div>
                             <div class="item-total">
                                 <span> total : <span style="color: green;">100$</span></span>
                                 <i class="fa-solid fa-delete-left"></i>
                             </div>
                         </div>
-
-
                     </div>
-
-                </li>
+                </li> -->
 
             </ul>
-            <div class="sub-total">
-                <h3>sub total : <span style="color: green;">0$</span></h3>
+            <div class="sub-total-box">
+                <h3>sub total : <span class="sub-total" style="color: green;">0</span></h3>
                 <button> check out</button>
             </div>
         </div>
